corpus/cpp/template/case-05/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.cpp:5:5: error: [template] no matching function for call to 'combine(int, const char [2])'
raw : no matching function for call to 'combine(int, const char [2])'
| src/main.cpp:5:5
|     combine(1, "x");
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void combine(T, T)'
  - src/main.cpp:5:5 deduced conflicting types for parameter 'T' ('int' and 'const char*')
omitted 3 internal template frames
details: --formed-explain | raw: --formed-raw